# conscripted

./: Cargo.toml  README.md
migrations/2022-09-22-193548_people/: up.sql
src/: lib.rs  schema.rs  table.rs
