[package]
name = "conscripted_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }

chrono = { version = "0.4", features = ["unstable-locales"] }

log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.10.1", features = ["macros", "auto-send"] }

[[bin]]
name = "show"